tests/fixtures/invalid/pow_bytes_list_list.py
# Cannot call pow() with Bytes, List[int], List[int]
x = pow(b"hello", [1, 2, 3], [1, 2, 3])
